# jingo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
certs/Tuong/: Apple_Development.p12  Apple_Distribution.p12  Developer_ID_Application.p12  Vi_Ngo_Tuong_certs.p12  iPhone_Distribution.p12  modern_certs.p12  private_key.pem
certs/Tuong/profiles/: JinGo Accelerator iOS.mobileprovision  JinGo Accelerator macOS.provisionprofile  JinGo PacketTunnel iOS.mobileprovision  JinGo PacketTunnel macOS.provisionprofile  JinGo_AppProxy_macOS.provisionprofile
cmake/: Dependencies-Qt.cmake  Platform-Android-Finalize.cmake  Platform-Android.cmake  Platform-Linux.cmake  Platform-Windows.cmake  Platform-iOS.cmake  Platform-macOS.cmake  Policies.cmake  Settings.cmake  Signing-Apple.cmake  Toolchain-MinGW.cmake
platform/: README.md
platform/android/: AndroidManifest.xml  build.gradle  genicon.sh  proguard-rules.pro
platform/android/assets/: license_public_key.pem
platform/android/assets/translations/: jingo_en_US.qm  jingo_km_KH.qm  jingo_ru_RU.qm  jingo_vi_VN.qm
platform/android/keystore/: .gitignore  README.md  jingo-release.keystore
platform/android/res/values/: styles.xml
platform/android/res/values-night/: styles.xml
platform/android/res/xml/: network_security_config.xml
platform/android/src/hev/htproxy/: TProxyService.java
platform/android/src/work/opine/jingo/: BootCompletedReceiver.java  JinGoActivity.java  JinGoVpnService.java  SecureStorage.java  SuperRayManager.java
platform/ios/: Info.plist  JinGo.entitlements  LaunchScreen.storyboard  PacketTunnelProvider.entitlements  README.md
platform/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/ios/cert/: JinGo_AppProxy_iOS.mobileprovision  JinGo_PacketTunnel_iOS.mobileprovision  JinGo_iOS.mobileprovision
platform/linux/: jingo-launcher.sh  jingo.desktop  jingo.install  work.opine.jingo.policy
platform/linux/debian/: postinst  postrm
platform/macos/: Info.plist  JinGo-dev.entitlements  JinGo.entitlements  PacketTunnelProvider.entitlements  README.md
platform/macos/cert/: JinGo_PacketTunnel_macOS.provisionprofile
platform/macos/cert/dev/: JinGo_Accelerator_macOS.provisionprofile  JinGo_AppProxy_macOS.provisionprofile  JinGo_PacketTunnel_macOS.provisionprofile
platform/windows/: ICON_README.md  JinGo.manifest  JinGo.rc  README.md  app.rc  generate_icon.py  icon_usage_example.cpp  icon_usage_example.qml.txt  installer.nsi
resources/: bundle_config.json  bundle_config.json.backup  license_public_key.pem  resources.qrc
resources/fonts/: README.md  download_fonts.md  download_fonts.sh
resources/icons/: app.icns  generate_icns.sh
resources/qml/: main.qml
resources/qml/components/: AboutDialog.qml  AuthView.qml  BaseCard.qml  BaseInput.qml  BottomNavButton.qml  BottomNavigationBar.qml  ChangePasswordDialog.qml  CountryHelper.qml  CustomButton.qml  CustomRadioButton.qml  CustomSwitch.qml  FlagIcon.qml  FontLoader.qml  ForgotPasswordForm.qml  HelpCenterDialog.qml  IconSymbol.qml  InviteReferralCard.qml  LevelBadge.qml  LicenseDialog.qml  LoginForm.qml  OrderListDialog.qml  PaymentDialog.qml  PeriodSelectDialog.qml  RegisterForm.qml  ServerCard.qml  ServerGroupCard.qml  ServerItem.qml  ServerSelectDialog.qml  SettingItem.qml  SettingsGroup.qml  SidebarDelegate.qml  SimpleBottomNavigationBar.qml  StatusIndicator.qml  SubscriptionCard.qml  Theme.qml  TicketListDialog.qml  TrafficDisplay.qml  qmldir
resources/qml/dialogs/: LicenseDialog.qml
resources/qml/js/: qrcode.js
resources/qml/pages/: AppSelectorPage.qml  ConnectionPage.qml  LoginPage.qml  ProfilePage.qml  ServerListPage.qml  SettingsPage.qml  SettingsPage.qml.backup  StorePage.qml
resources/qml/pages/simple/: SimpleConnectionPage.qml  SimpleProfilePage.qml  SimpleStorePage.qml
resources/translations/: README.md  jingo_en_US.ts  jingo_fa_IR.qm  jingo_fa_IR.ts  jingo_km_KH.ts  jingo_my_MM.qm  jingo_my_MM.ts  jingo_ru_RU.ts  jingo_vi_VN.ts  jingo_zh_CN.qm  jingo_zh_CN.ts  jingo_zh_TW.qm  jingo_zh_TW.ts
scripts/: build-arch-docker.sh  package-linux.sh
scripts/signing/: fix_plugins_rpath.sh  post_build_android.sh  post_build_ios.sh  post_build_macos.sh
src/: main.cpp
src/core/: XrayCBridge_Apple.mm
src/extensions/PacketTunnelProvider/: Info-iOS.plist  Info.plist  JinGoXPCProtocol.h  PacketTunnelProvider.mm  XrayExtensionBridge.h  XrayExtensionBridge.mm  main.m
src/panel/v2board/: V2BoardNormalizer.cpp  V2BoardNormalizer.h  V2BoardProvider.cpp  V2BoardProvider.h
src/panel/xboard/: XBoardNormalizer.cpp  XBoardNormalizer.h  XBoardProvider.h
src/platform/ios/: IOSSafeAreaProvider.h  IOSSafeAreaProvider.mm
src/platform/linux/: res_search_wrapper.c
src/platform/macos/: JinGoCore.mm  JinGoHelper.cpp
src/ui/: SystemTrayManager.cpp  SystemTrayManager.h
src/viewmodels/: ConnectionViewModel.cpp  ConnectionViewModel.h  InviteViewModel.cpp  InviteViewModel.h  LoginViewModel.cpp  LoginViewModel.h  RegisterViewModel.cpp  RegisterViewModel.h  ServerListModel.cpp  ServerListModel.h  ServerListViewModel.cpp  ServerListViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  SubscriptionListModel.cpp  SubscriptionListModel.h  UserStatsViewModel.cpp  UserStatsViewModel.h
white-labeling/: README.md
